--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,20 +4,24 @@
 
     <ul class="navbar-section">
       <li class="nav-item btn btn-link">
-        <a [routerLink]="'/'">Home</a>
-      </li>
-      <li class="nav-item btn btn-link">
         <a [routerLink]="'/'">Film</a>
       </li>
       <li class="nav-item btn btn-link">
-          <a [routerLink]="'/tv'">Série</a>
+        <a [routerLink]="'/tv'">Série</a>
       </li>
-      <li class="nav-item btn btn-link">
-          <a [routerLink]="'/my-movie'">Mes films</a>
-      </li>
+
     </ul>
 
     <ul class="navbar-section">
+      <li *ngIf="user" class="nav-item btn btn-link bg-gray">
+        Hello : {{user.email}}
+      </li>
+      <li *ngIf="user" class="nav-item btn btn-link">
+        <a href="#" (click)="logout()">Logout</a>
+      </li>
+      <li *ngIf="!user" class="nav-item btn btn-link">
+        <a [routerLink]="'/login'">Login</a>
+      </li>
     </ul>
 
   </nav>
